// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cli() should keep baseURL 1`] = `
"# test

## test1

image-salt-1

<img src=\\"https://localhost:3000/path/to/iamge1.jpg\\" alt=\\"image1\\">

## test2

image-salt-2

![image2](https://localhost:3001/path/to/iamge2.jpg)
"
`;

exports[`cli() should return stderr with exitcode=1 1`] = `
"Error: extractAttrs: invalid attrs has injected
"
`;

exports[`cli() should return stdout with exitcode=0 1`] = `
"# test

## test1

image-salt-1

<img src=\\"/path/to/iamge1.jpg\\" alt=\\"image1\\">

## test2

image-salt-2

<img src=\\"/path/to/iamge2.jpg\\" alt=\\"image2\\">
"
`;

exports[`cli() should skip url was not matched baseURL 1`] = `
"# test

## test1

image-salt-1

<img src=\\"/path/to/iamge1.jpg\\" alt=\\"image1\\">

## test2

image-salt-2

![image2](https://localhost:3001/path/to/iamge2.jpg)
"
`;
